[package]
name = "replicate"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gmail.com>"]

[dependencies]
futures = "0.2"
pcap = "0.7"
tokio-core = "0.1"
pnet_packet = "0.21"
# tokio-proto = "0.1.1"
# tokio-service = "0.1.0"
# log = "0.3.8"
# env_logger = "0.4.3"
# tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp.git" }
